# Lastminite.ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  all_mindmaps.html  docker-compose.yaml  explain.md  folde_structure.py  mm_140130_b364a0.html  prd.md  pyproject.toml  summary.md  todo.txt
.github/workflows/: test.yml
examples/: __init__.py  gemini_image_test.py  generate_image_test.py  mcp_test.py  mcp_use_example.py  muti_mcp_test.py  supervisor_service_demo.py  test.py  test_handoff.py
interface/: chainlit_ui.py
src/lastminute_api/: config.py
src/lastminute_api/application/agent_service/: graph.py  node.py  prompts.py  service.py  state.py
src/lastminute_api/domain/tools/: graph_tool.py  registry.py
src/lastminute_api/infrastructure/api/: main.py  models.py
src/lastminute_api/infrastructure/llm_providers/: base.py  chat_groq.py  chat_openai.py
src/lastminute_api/infrastructure/mcp/: config.py  mcp_agent.py  mcp_client.py
src/lastminute_api/infrastructure/mcp_clients/: __init__.py  arxiv.py  base.py  pubmed.py
src/lastminute_api/infrastructure/nano_bannana/: __init__.py  base.py  gemini.py  openai.py  together.py
src/lastminute_api/infrastructure/tools/: tavily_serch.py
tests/: __init__.py  conftest.py  test_lastminute_api.py  test_llm_provider_prompts.py  test_llm_providers.py  test_nano_banana.py  test_nanobanana_openai.py
